--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -5,4 +5,5 @@
     background-repeat: 'no-repeat';
     background-position: '10% 25%';
     border-radius: 10px;
+    border: solid 2px rgba(255, 255, 255, 0.692);
 }
